L2.18 add readme
